# liulifox233.github.io

./: .gitattributes  .gitignore  404.html  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  omofun.py  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  deploy.yml
about/: index.html
archive/2024/07/: index.html
archive/2024/11/: index.html
archive/2024/12/: index.html
archive/2025/01/: index.html
archive/2025/02/: index.html
archive/2025/08/: index.html
category/bupt/: index.html
category/tech/: index.html
category/生活/: index.html
code/: benchmark.cpp  cos-sim.cpp  llm.py  td3.cpp
docs/: .authors.yml  about.md  index.md
docs/code/: md5-bf.cpp  md5-new.cpp  rndgen.cpp  td1.cpp  td2.cpp
docs/javascripts/: chat.js
docs/notes/: index.md
docs/notes/database/: cap.md
docs/notes/japanese/: case-particles.md  plan.md
docs/posts/: ZXHPC_writeup.md  change_major.md  dora.md  graduate.md  homebrew.md  little_things.md  live2d.md
docs/records/: index.md
docs/records/posts/: crossover.md  live2d.md  mkdocs.md  sudo_local.md
docs/stylesheets/: extra.css
ext/: chat.py
javascripts/: hpc-visualizations.js
notes/: index.html
notes/database/cap/: index.html
notes/japanese/case-particles/: index.html
notes/japanese/plan/: index.html
overrides/partials/: content.html  post.html
records/: index.html
search/: search_index.json
stylesheets/: chat.css  extra.css  hpc-visualizations.css
(+13 files in other folders)
